# ChangeLog for net-misc/stunnel
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/stunnel/ChangeLog,v 1.180 2014/08/12 22:18:47 blueness Exp $

  12 Aug 2014; Anthony G. Basile <blueness@gentoo.org> stunnel-5.03.ebuild:
  Stable on arm, ppc and ppc64.  Bug #519400

  08 Aug 2014; Jeroen Roovers <jer@gentoo.org> stunnel-5.03.ebuild:
  Stable for HPPA (bug #519400).

  08 Aug 2014; Anthony G. Basile <blueness@gentoo.org> +files/stunnel,
  +files/stunnel.conf, +files/stunnel.tmpfiles.conf, -files/stunnel.conf-r1,
  -files/stunnel.rc7, -files/stunnel.tmpfiles.conf-r1, stunnel-5.02.ebuild,
  stunnel-5.03.ebuild:
  Reset revision values of confd, initd and friends

  08 Aug 2014; Anthony G. Basile <blueness@gentoo.org> -files/stunnel.conf,
  -files/stunnel.initd-start-stop-daemon, -files/stunnel.tmpfiles.conf:
  Remove older config files

  08 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  -files/stunnel-3.26-gentoo.diff, -files/stunnel-4.44-listen-queue.diff,
  -files/stunnel-4.44-xforwarded-for.diff, -stunnel-3.26.ebuild,
  -stunnel-4.44.ebuild, -stunnel-4.56-r2.ebuild, metadata.xml:
  Remove older vulnerable versions

*stunnel-5.03 (08 Aug 2014)

  08 Aug 2014; Anthony G. Basile <blueness@gentoo.org> +stunnel-5.03.ebuild:
  Version bump

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> stunnel-5.02.ebuild:
  Stable for sparc, wrt bug #503506

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> stunnel-5.02.ebuild:
  Stable for ia64, wrt bug #503506

  17 Jun 2014; Tobias Klausmann <klausman@gentoo.org> stunnel-5.02.ebuild:
  Stable on alpha, bug #503506

  13 Jun 2014; Agostino Sarubbo <ago@gentoo.org> stunnel-5.02.ebuild:
  Stable for x86, wrt bug #503506

  13 Jun 2014; Agostino Sarubbo <ago@gentoo.org> stunnel-5.02.ebuild:
  Stable for amd64, wrt bug #503506

  11 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
  +files/stunnel-3.26-gentoo.diff:
  Restore patch for 3.26
