@@ -4,10 +4,10 @@ DESCRIPTION=TLS/SSL - Port Wrapper
 EAPI=5
 HOMEPAGE=http://www.stunnel.org/index.html
 IUSE=ipv6 selinux tcpd ssl
-KEYWORDS=~alpha amd64 arm hppa ~ia64 ppc ppc64 ~s390 ~sparc x86 ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x86-macos
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sparc ~x86 ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x86-macos
 LICENSE=GPL-2
 RDEPEND=tcpd? ( sys-apps/tcp-wrappers ) dev-libs/openssl selinux? ( sec-policy/selinux-stunnel )
 SLOT=0
-SRC_URI=http://www.stunnel.org/downloads/stunnel-5.03.tar.gz
+SRC_URI=http://www.stunnel.org/downloads/stunnel-5.04.tar.gz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ssl-cert	b53367370fde96e19beca78050a47c61	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=45047e8144806734d006cc47279e55ef
+_md5_=cc905df2d5ec1dc81e92171beb6aad78
