@@ -9,6 +9,6 @@ LICENSE=public-domain
 RDEPEND=python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_single_target_python3_4? ( dev-lang/python:3.4 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_single_target_python2_7(+)?,python_single_target_python3_3(+)?,python_single_target_python3_4(+)?]
 REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) python_single_target_python3_3? ( python_targets_python3_3 ) python_single_target_python3_4? ( python_targets_python3_4 ) ^^ ( python_single_target_python2_7 python_single_target_python3_3 python_single_target_python3_4 )
 SLOT=0
-SRC_URI=http://youtube-dl.org/downloads/2014.09.18/youtube-dl-2014.09.18.tar.gz
+SRC_URI=http://youtube-dl.org/downloads/2014.09.22/youtube-dl-2014.09.22.tar.gz
 _eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	distutils-r1	90e7008a7d21e3b1597bea444bb85827	eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	47dda904cf91c61f45b564d9f834fde1	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=0489cc33b21dc17d2e7d72295648991a
+_md5_=bb0109aa0a62dd8afcbdcd5395aae510
