@@ -7,24 +7,26 @@ AUX stunnel.initd 1986 SHA256 4f97093f81b854099851ba32552b36036906933933f7a794c7
 AUX stunnel.tmpfiles.conf 38 SHA256 68c9c963673a3bf0f3ce3f32751c9e36a3299251da12e9bcae929629657df135 SHA512 8e06ec39547ce5991217e551e563f5d212742afda94da801ec266c632375aae489594d14815fe596319d9881eb5a58e32bf05baa69f3a9d1bae554419f5ac1bb WHIRLPOOL 5e070b27ed14c06efc8e66d23a9098d60cc16c01331824d910786c6fa7697f96b8704dc02af4f4346b4628dd22b8729a11756c7d85596ffcf916f36f9de8ec05
 DIST stunnel-5.02.tar.gz 590655 SHA256 c258b71d7f82bba5b0a4ccc69fbda632f1fefe9108589a92aa1016f33985973e SHA512 2f1c44b06188e3bd347b97544122eb9bc0c2a4227e6c4bab184ddef8a35300c09451d836dbd97de3d9656c69ff4ad8f0573e54cdb738bdd751388bd93d0417a6 WHIRLPOOL 9d974639157a1970fcd60abc9b05f3e0ebbdcf45f229736cbbdf7e72d0bdef405e65cf654c4a7820202258dc0a1d3eb23c46f1a67c9cc0f567f4cbede0d04d33
 DIST stunnel-5.03.tar.gz 590778 SHA256 9a1e369466fa756e6f48b11480a3338c1fa4717e6472871bf4a3a96c483edd03 SHA512 db46df32e51064c2f2c148d6222088a5c9cc9a8b5ad746b1a2d848fef5cb69d7580f52d7357aec872c67c452ff585f60f455360ff0f6748449ce676292bfb4b5 WHIRLPOOL 00a9b4649c2c06ff4b2b5b3cb022fc08d91dd9cd167786acaff8ce0a7e632e6a8d4ef1d82f2f694b241f4e30f9e2fa2e28eac5be2224a48d3667242f23347864
+DIST stunnel-5.04.tar.gz 592939 SHA256 ee9702e073cb8d5940a1310ae171a38d3264f1ce3b087160728bbbcf5710cec1 SHA512 035f220106a1b9ff9c7b97c8dcd16397fd23e18213607d2a3b8502696402862dc2144fa388efbcc036db7c5235f6a89a3444e73efb9f16a793ad6bde175abc3d WHIRLPOOL 2cf9a25fa1cab01f00c43d3aa3a5a7af2bc1ab01aa9d8cd09fe07edcc635b8a2bad6098f9ea8feb43376290194bda7a5410e9f514f1185835f8cd214ec63b884
 EBUILD stunnel-5.02.ebuild 2192 SHA256 99bcde7a173e23baf878b89844c60a631bde8fdb3b2f64edd3823c3039afcb19 SHA512 b9e66ee909dc16262a437770789fa173b3400708e33e2c781ba7342ff0841615599bb08de3aa3a6c18a53a5ff21d3ad7d0f7fd93e28315549fd3c6a82d9e43bf WHIRLPOOL 1e846a9231f5909d90361ae112883ec4126fb02c32fda872412f3c67abf46d3912fdf3905a95e204c1fa98af89d913a360b8e47a9d48e1a4a6f04d2ed8b97181
-EBUILD stunnel-5.03.ebuild 2196 SHA256 f20cd8aeb5110ebf2f237c19dbb1192983af283234c9511d2e647e5ef7f792a6 SHA512 fc3c33d4ed100ab2035c9c2f973f9a5afe486454c49b4145a41f701c5f1bbce298ae8cc58335166cfc1a5a0f561edaf7a6cf05823d246cd4614d9fd3383ea50b WHIRLPOOL ac09b19b028879905854502d5c3170b74d26135cd422ce5a59072e08607ad88c2ff03b6cbcd7c11550904a2db2dc55faf1cadb85e3e9b31e0ff802475c76f5fd
-MISC ChangeLog 26520 SHA256 aec68d7d1753efc967c2c83dd47843dd79c38c91a5c531ce79c606c28110563e SHA512 05968a7a5205f6effb5d9695baa526191b162bc5ef04c3ad81f20f6dfdc0b0ee63712cc1df4b479266e103c3b6f0568517cfed24aa43e4c7af12d60431c53318 WHIRLPOOL e77858c3ac80a55c4226e2aeff220447da11867bea65649f2ec9bb1fb4a3c42f2fdc99d6643275d0aa87a2f27bb7cdbdff78f131365a677a74cea77f6c493175
+EBUILD stunnel-5.03.ebuild 2194 SHA256 09a232126fc9c88e11f54aeb70976c8c45e1a5ca796c46cfe3270ac2216fd14f SHA512 99248666d9b2038b7e86a86bf83fd26ae2721eee2aa300129207dd73f545ff1d608706fb9ad0795b55dcc0efb7ddf8d8a190d872f80a0a27649887a3ab1fc0ca WHIRLPOOL 2bcd693183c39063fa502761d8f21211d9acbd3f3ca340b1be3c98c65a16c5f886464461c4f15c8921c8fcebefbd318bdcd2f21467f7b4f660679695ed56ddbc
+EBUILD stunnel-5.04.ebuild 2200 SHA256 c1f745fa9d1885fefa2ff6485c4154a130c9a0932c772ba324fa9f9e4fd6ef09 SHA512 50695116ecdb558c7bf230a64077457dae1a4595d94371734fe3d5ae9457f7a63dda2062a3efd4f7d94831b8e7033a1d2153481432de013a8c6e062e712d0941 WHIRLPOOL 6627c3e08acfefad402feeaa1208197abf15ad90f7398773e2e78edcd29cd025a2d8bd55d70b992aa24d280c530993e52900ea37fa74980e079eae3449caf143
+MISC ChangeLog 26755 SHA256 049e9e6ac1903a9578fe8fcc14d144084dbfa2fe06509c6aa60b3773af9541b0 SHA512 27141ca2c336b7cd96e9e15c41d31dd09b197c2fd2d5e9f97c655ee33b245adbc6006cce8612a3e2f605f0019bdfcdb25346dca190b7f2f618c846ee25d1dc23 WHIRLPOOL 952cc5faa2e7193fbfc41fa0f03b80c7c343db0807d35e4a11e360bbad92af0b4bd0af4cc33c1ce1a5976e79c8ac198f7025bb9508e79dee9b94b515a20fa47b
 MISC metadata.xml 622 SHA256 42b6c75bd95fd3f6322e6a6f726a9e07d74f0b46376a6f17718f9043cf6cc225 SHA512 930faf03b0f8e73c0ddb1a9821c04d8e0b0eb49fbf1e70ba439cd810e7aac827490b2036fb9a4bf4d8f2d96b3a2e0c0b2923ed21ae17b08ca09464c7cee54997 WHIRLPOOL a604c6422e399f97c5d701d756eee871438b9bb7fb7195c5b4a35357be9e11b7709d7e77172d85f1e5f1d31987de958e8f0f29f13bd1106afab1bb32b75564e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT6pNJAAoJEJOE+m71LUu6uhsQAJUq2/RUKY8y7g+KCD83mWIX
-JnG8NpEL6bOHy8gB9JVSuS2NdhXnW+FEHp1zU0c2cnAXfd6SCLXvHJ1NLteS91pq
-HDb4EbYaW+AkdaXENvVKdDUqXw6I53PQmZaJOeHayOTyU1JFz02frNXy9zzEqF4K
-sS4Xvgd4Cl+NWnCMBA4GVobaWyubezF7rLJ8wTnWyEhlrhI+hiQ5lkaT1ipBvvW0
-5AxFdyXp91zTu9GH5bjG2KBU9KTubtGH/XI6rwk7QG4oqsDXwX+//tHinFV3316U
-dIT/F9UxvHHU0Wk2FC2720P8X1gZEd3qQF3hEbLkxvavo+3dPXu6yLmXrL6bfHHk
-3zlazf+fw+3Qr/arp4tUs47ddZuIufWUcI9Ek+D1EE1ezE3glG6/Py2DO/YpXZlx
-tqI3amJiHBa7/kgrTLHhh0SIOlKZlhVqzS0LEQ2WxwXlKGbKezEftGWXBKFmL05d
-A1ujb4GtKQkZQdi+DcFTy5nPfFTbU1vUIYDntXkrui24oLP6vfCMsTtsRglkdvIt
-fei/XblF/fF0ExgK+mgliWrQlYykdLrXiVgYblvju97LaOyvo+z5hIw3Z6f/kjgw
-gott1UYl0+aVxJtnoVarIzfe6t1J17aIcNZUjz7nKEhxQ4o09IuaCB3XM2xJUJmx
-AQLBff58acf7VPwW7oe6
-=CUei
+iQIcBAEBCAAGBQJUIANfAAoJEJOE+m71LUu6dqAP/3sHqAT455RLfhG+Y7n8KCTa
+nCVIfPwXriVESPZz2eB+tgirpc3OnbtAiM6PZN1COR1t7a+T/00dcF3/bU3qDu75
+W/afTa0FCy2N388ZUpqllpq1ywS2TXxtRzbUV+8s3kbOgmhuxwMNNPBXiyJ+xAlq
+YGVXi+YU7cGR/ZNva+K0E//NLRWforOUPjBcZuOZwnr87JIVIWfx/8TWrBqTg/ah
+9rZ3h/MrwlyvHP+ovoe5IZ67V19bqvn2ZIoDC80ancnyw6EUor4w9p6uG3u62Uhg
+AmxiCPyB8VWJrVmxdv03Ph96QkXn1ZC7EpZf7LhIYNcCsre7M3VuwxyKhiXQ5PQl
+YtkToX8eNJ86AV3BT4D2kRsH0i7RvOD44ppg5S4hN2lDkZicaD5VA9S3ilb6QvrR
+CwwM3m4pfV0wfBxUTzGhJTwnE3Wil8utSUa0jT1lQ5jfqt9YKs17SZxDrKj6aODG
+vNCoL17TNiF9lVNIxIFehVIgnXMTricWiFXhP5LuruxE3wuJiTPpNyGVXdHRh3NZ
+Y/Yy7iDWtVU/gq3vAHL9Iim+e+Ddjs6dIF4mV2OI9xSrgXKi/r3gEIPC16OZkXAk
+PmTrpC2C/b/12bjWoWinNW7YRBnhzMh73uzsJLiTFzi6t0VdjjyCLC6hrD+671SG
+Vq4K8pPLMxE7wN3JlWT5
+=Qok0
 -----END PGP SIGNATURE-----
