@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2014.09.18.ebuild,v 1.1 2014/09/19 07:28:47 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2014.09.22.ebuild,v 1.1 2014/09/22 11:29:53 jer Exp $
 
 EAPI=5
 
