@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.391 2014/09/19 09:20:57 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.392 2014/09/22 11:29:53 jer Exp $
+
+*youtube-dl-2014.09.22 (22 Sep 2014)
+
+  22 Sep 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.09.18.ebuild,
+  +youtube-dl-2014.09.22.ebuild:
+  Version bump.
 
 *youtube-dl-2014.09.19 (19 Sep 2014)
 
