@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/stunnel
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/stunnel/ChangeLog,v 1.180 2014/08/12 22:18:47 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/stunnel/ChangeLog,v 1.182 2014/09/22 11:09:07 blueness Exp $
+
+  22 Sep 2014; Anthony G. Basile <blueness@gentoo.org> stunnel-5.03.ebuild:
+  Stable amd64 and x86, bug #519400
+
+*stunnel-5.04 (22 Sep 2014)
+
+  22 Sep 2014; Anthony G. Basile <blueness@gentoo.org> +stunnel-5.04.ebuild:
+  Version bump
 
   12 Aug 2014; Anthony G. Basile <blueness@gentoo.org> stunnel-5.03.ebuild:
   Stable on arm, ppc and ppc64.  Bug #519400
